<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/main_tab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font18"
        android:textColor="@drawable/main_tab_text_color"
        android:text="@string/maintab_mine"/>

    <TextView
        android:id="@+id/main_tab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font18"
        android:layout_marginLeft="@dimen/margin18"
        android:layout_marginRight="@dimen/margin18"
        android:textColor="@drawable/main_tab_text_color"
        android:text="@string/maintab_music" />

    <TextView
        android:id="@+id/main_tab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font18"
        android:textColor="@drawable/main_tab_text_color"
        android:text="@string/maintab_discover"/>

</LinearLayout>