<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/menu_item_myvip"
        style="@style/MenuHeadItem">

        <ImageView
            android:layout_width="@dimen/menu_head_img_size"
            android:layout_height="@dimen/menu_head_img_size"
            android:src="@drawable/more_icon_myvip_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin2"
            android:layout_marginTop="@dimen/margin5"
            android:text="@string/upgrade_to_vip"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enjoy_music_right"
            android:textColor="@color/text_second"
            android:textSize="@dimen/font13" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_personalcenter"
        style="@style/MenuHeadItem">

        <ImageView
            android:layout_width="@dimen/menu_head_img_size"
            android:layout_height="@dimen/menu_head_img_size"
            android:src="@drawable/more_icon_personal_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin2"
            android:layout_marginTop="@dimen/margin5"
            android:text="@string/personal_center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font15" />

        <TextView
            android:id="@+id/current_themename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_second"
            android:textSize="@dimen/font13" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_notifycenter"
        style="@style/MenuHeadItem">

        <ImageView
            android:layout_width="@dimen/menu_head_img_size"
            android:layout_height="@dimen/menu_head_img_size"
            android:src="@drawable/more_icon_notificationcenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin2"
            android:layout_marginTop="@dimen/margin5"
            android:text="@string/notification_center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font15" />

    </LinearLayout>

</LinearLayout>